--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/first-project?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatheria?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=990531
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
